# AQUABOTS

./: .gitignore  README.md  ROS2_vs_ArduPilot.md  mqtt_config.json
Jamie/: NEO6M_Temp_CSV
John/Firmware/Communications System/main/: CMakeLists.txt  Kconfig.projbuild  avoidance.c  avoidance.h  command_engine.c  command_engine.h  espnow.c  espnow_pingpong.c  formation.c  formation.h  leader_election.c  leader_election.h  main.c  membership.c  membership.h  node_config.c  node_config.h  obstacle_sense.c  obstacle_sense.h  scheduler.c  scheduler.h  swarm_protocol.h  swarm_transport.c  swarm_transport.h
John/Firmware/swarmLogic/main/: CMakeLists.txt  README.md  avoidance.h  main.c  membership.c  membership.h  scheduler.h  swarm_protocol.h  swarm_transport.h
PREVIOUS TEAM/: 92005A452_Steel Pan Head Phillips Screw.SLDDRW  Aquabot Upper Shelf.SLDPRT  Assem2Drawing.SLDDRW  Battery3.SLDPRT  BottomShell2.2TDPdrwg.SLDDRW  Lower Shell.SLDDRW  Motor Mock.SLDPRT  README.md  Rudder_V1.SLDDRW  Rudder_V1_NACA0012.SLDPRT  ShelfSupportEndCaps.STL  Shelf_Spacer.3mf  Shelves2.0.SLDPRT  Shelves2.0WithStarlinkAndMount.SLDASM  StarLink Clamp 1.SLDPRT  Starlink Clamp 2.SLDPRT  Starlink Mini stand part A 1.2.STL  Starlink Mini stand part B 1.2.STL  Starlink Mini stand part B.STL  StarlinkStand.cmauldin.bgcode  Vertical Supports.STL  cmauldin_BottomShelf3.1_recut.DXF  cmauldin_Shelf_Spacer_0.4n_0.2mm_PLA_MINIIS_2m.bgcode  cmauldin_Starlink Mini stand 1.2_0.4n_0.2mm_PLA_XLIS_9h47m.bgcode  cmauldin_topShelf.DXF
Raspberry_Pi_Code/: CMakeLists.txt  GNC_Code.cpp  NavScript.py  main_run.py  mqtt.py
Raspberry_Pi_Code/include/: sensor_fusion.h
Raspberry_Pi_Code/src/: hardware.cpp
Raspberry_Pi_Code/tests/: control_test.cpp
backend/: auth.py  main.py  mqtt_client.py  requirements.txt  test_main.py
docs/: AQUABOTS ISR - COMMS SYSTEM.pptx
frontend/: app.jsx  index.html  package.json
ground_station/: README.md  app.py  config.py  mqtt_client.py  requirements.txt  serial_bridge.py  signaling_server.py
ground_station_folder/: communication_format.py  ground_station.py  mqtt_handler.py
reference/: 92005A452_Steel Pan Head Phillips Screw.SLDPRT  Aquabot lower shelf.SLDPRT  Assem2.SLDASM  Battery2.SLDPRT  BottomAssem.SLDASM  BottomAssem.SLDDRW  BottomShelf3.1.DXF  BottomShelf3.1.SLDDRW  BottomShell2.2.SLDPRT  BottomShell2.2.STL  BottomShell2.2_solid.SLDPRT  Shelf Assebmly with components.SLDASM  ShelfSupportEndCaps.3mf  ShelfSupportEndCaps_Reprint.3mf  Shelf_Spacer.STL  Shelves.SLDDRW  Shelves1.2.SLDPRT  Shelves2.0.3mf  Shelves2.0top_0.4n_0.2mm_PLA_XLIS_8h36m.bgcode  Starlink Mini stand 1.2.3mf  TPUBushing.SLDPRT  (+11 more)
(+104 files in other folders)
